# PhilomenaClockZephyr

./: README.md
app/: .gitignore  CMakeLists.txt  west.yml
docs/: unsorted.md
